--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,12 +1,10 @@
 name: DocxTemplate
-description: A sample command-line application.
-# version: 1.0.0
-# homepage: https://www.example.com
-# author: Your Name <email@example.com>
+description: A Docx template engine.
+version: 0.1.0
+author: Pavel Snitko <brian57reg@gmail.com>
 
 environment:
   sdk: '>=2.5.0 <3.0.0'
-  
 
 dependencies:
   archive: ^2.0.11
