--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
-name: DocxTemplate
+name: docx_template
 description: A Docx template engine.
 version: 0.1.0
 author: Pavel Snitko <brian57reg@gmail.com>
-
+homepage: https://github.com/PavelS0/docx_template_dart
 environment:
   sdk: '>=2.5.0 <3.0.0'
 
