--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,8 @@ environment:
 dependencies:
   archive: ^2.0.11
   xml: ^3.5.0
+  crypto: ^2.1.3
+  path: ^1.6.4
 
 dev_dependencies:
   pedantic: ^1.8.0
