--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: docx_template
 description: A Docx template engine.
-version: 0.3.0-nullsafety
+version: 0.3.0
 homepage: https://github.com/PavelS0/docx_template_dart
 environment:
   sdk: '>=2.12.0 <3.0.0'
@@ -10,7 +10,7 @@ dependencies:
   xml: ^5.1.0
   crypto: ^3.0.1
   path: ^1.8.0
-  collection: ^1.15.0-nullsafety.4
+  collection: ^1.15.0
 
 dev_dependencies:
   pedantic: ^1.11.0
