--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,14 +2,25 @@ name: docx_template
 description: A Docx template engine.
 version: 0.3.2
 homepage: https://github.com/PavelS0/docx_template_dart
+publish_to: none
+
 environment:
-  sdk: '>=2.16.2 <3.0.0'
+  sdk: '>=2.17.6 <3.0.0'
+
 
 dependencies:
-  archive: ^3.3.0
+  archive: ^3.3.1
   xml: ^6.1.0
   collection: ^1.16.0
-  path: ^1.8.2
+  path: 1.8.1
+  pdf: ^3.8.3
+  flutter:
+    sdk: flutter
+
+  equatable: ^2.0.5
+  google_fonts: ^3.0.1
 dev_dependencies:
   pedantic: ^1.11.1
-  test: ^1.21.3
+
+  flutter_test:
+    sdk: flutter
